--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Smokum&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Biografia</title>
 </head>
 <body>
     <div class="background container justify-content-center mt-5 animate__animated animate__bounceIn animate__delay-0.5s">
