--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Biografia</title>
 </head>
 <body>
-    <div class="background container justify-content-center mt-5 animate__animated animate__bounceIn animate__delay-0.5s">
+    <div class="container justify-content-center mt-5 animate__animated animate__bounceIn animate__delay-0.5s">
         <div class=" mt-5 row d-flex justify-content-center text-justify">
             <div class="col-md-5">
                 <div class="col text-center">
