--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <title>Biografia</title>
 </head>
 <body>
-    <div class="container justify-content-center mt-5 animate__animated animate__bounceIn animate__delay-0.5s">
-        <div class=" mt-5 row d-flex justify-content-center text-justify">
+    <div class="background container justify-content-center mt-5 animate__animated animate__bounceIn animate__delay-0.5s">
+        <div class="mt-5 row d-flex justify-content-center text-justify">
             <div class="col-md-5">
                 <div class="col text-center">
                     <img class="animate__animated animate__rubberBand animate_delay-0.5s rounded-circle" src="assets/img/me.jpg" width="80%" alt="">
