--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="mt-5 row d-flex justify-content-center text-justify">
             <div class="col-md-5">
                 <div class="col text-center">
-                    <img class="animate__animated animate__rubberBand animate_delay-0.5s rounded-circle" src="assets/img/me.jpg" width="80%" alt="">
+                    <img class="animate__animated animate__rubberBand animate_delay-0.5s rounded-circle" src="assets/img/me1.png" width="80%" alt="">
                 </div>
             </div>
             <div class="col-md-7 ">
